css fixed z-indexes

--- a/css/textbubbles.css
+++ b/css/textbubbles.css
@@ -43,7 +43,7 @@ body,
 
 .wrapper-head {
     position            : relative;
-    z-index             : 1;
+    z-index             : 10;
     padding             : 6px;
     overflow            : visible;
     background-color    : #333;
@@ -300,7 +300,7 @@ body,
 }
 
 .word-bubble:hover {
-    z-index    : 9999;
+    z-index    : 1000;
     box-shadow : inset 200px 200px rgba(0, 0, 0, 0.4);
 }
 
@@ -312,6 +312,7 @@ body,
     top         : -9999px;
     left        : -9999px;
     z-index     : 1;
+    padding     : 0 2px;
     font-size   : 12px;
     line-height : 22px;
     text-align  : center;
